Fixed sun and cloud animation break on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -247,20 +247,6 @@ body {
 }
 
 @media (max-width: 768px) {
-    .card {
-        width: 300px;
-        height: 200px;
-        padding: 20px;
-    }
-
-    .container {
-        width: 200px;
-        height: 200px;
-        right: -25px;
-        top: -40px;
-        transform: scale(0.6);
-    }
-
     .cloud {
         width: 200px;
     }
